--- a/sass/partials/_checkout-payment-methods.scss
+++ b/sass/partials/_checkout-payment-methods.scss
@@ -7,6 +7,14 @@
 }
 
 
+.woocommerce-page.woocommerce-checkout .wfc-wrapper #payment {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+
+
 .woocommerce-page.woocommerce-checkout .wfc-wrapper #payment ul.payment_methods {
 	list-style-type: none;
 	margin: 0;
