--- a/sass/partials/_checkout-place-order.scss
+++ b/sass/partials/_checkout-place-order.scss
@@ -56,7 +56,7 @@
 
 
 
-.wfc-place-order .wfc-place-order-button {
+.wfc-wrapper .wfc-place-order .wfc-place-order-button {
 	margin: $global-spacing auto $global-spacing;
 	min-width: remsize( 28rem );
 }
