--- a/sass/partials/_checkout-shipping-methods.scss
+++ b/sass/partials/_checkout-shipping-methods.scss
@@ -2,6 +2,15 @@
   #CHECKOUT SHIPPING METHODS
 \*------------------------------------*/
 
+.woocommerce-checkout .wfc-wrapper .woocommerce-shipping-fields,
+.woocommerce-checkout .wfc-wrapper .woocommerce-shipping-fields .woocommerce-shipping-fields__field-wrapper {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+
+
 #shipping_method.shipping-method__options {
 	list-style-type: none;
 	margin: 0;
